# intelligent_consultation

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  LOGGING.md  QUICKSTART.md  README.md  TTS_ASR_DEV_PLAN.md  docker-compose.yml  start.sh  start_backend.sh  start_frontend.sh  start_local.sh  view_logs.sh
backend/: .dockerignore  .env.bak  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-core.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  base.py  customer_service_agent.py  doctor_agent.py  health_manager_agent.py  operations_agent.py  orchestrator.py
backend/app/agents/tools/: __init__.py  diagnosis_tool.py  knowledge_graph_tool.py  medical_query_tool.py  rag_tool.py
backend/app/api/: logging_middleware.py  middleware.py
backend/app/api/middleware/: __init__.py  auth.py  compression.py  rate_limit_enhanced.py  request_validator.py  response_time.py  response_wrapper.py
backend/app/api/v1/: __init__.py  admin.py  (+7 more)
backend/app/common/: __init__.py  encryption.py  error_handler.py  exceptions.py  rbac.py  tracing.py  transaction.py
backend/app/database/: base.py  health_check.py  indexes.py  init_db.py  session.py
backend/app/infrastructure/: __init__.py  cache.py  graceful_shutdown.py  monitoring.py  rate_limit.py  resource_manager.py  retry.py
backend/app/knowledge/: __init__.py
backend/app/models/: __init__.py  agent.py  consultation.py  knowledge.py  user.py
backend/app/prompts/: __init__.py  agents.py  consultation.py  image.py  knowledge.py  operations.py  safety.py
backend/app/services/: __init__.py  asr_service.py  cache_service.py  cache_warmer.py  confidence_scorer.py  context_compressor.py  context_manager.py  context_manager_legacy.py  feedback_analyzer.py  hallucination_detector.py  kg_update_service.py  langfuse_service.py  llm_service.py  logging_service.py  milvus_service.py  milvus_service_optimized.py  object_storage.py  output_processor.py  prompt_chains.py  prompt_engineer.py  prompt_safety_guard.py  redis_service.py  redis_service_optimized.py  semantic_cache.py  tts_service.py
backend/app/utils/: env_validator.py  logger.py  security.py  validators.py
backend/scripts/: README.md  access_neo4j.md  check_import_status.py  import_medical_kg.py  import_medical_kg_realtime.py  init_all.py  init_knowledge_graph.py  load_medical_knowledge.py  load_sample_data.py  migrate_to_object_storage.py  prepare_training_data.py  test_system.py  train_ml_models.py  verify_setup.py
backend/scripts/data/: check_import_status.py  fetch_medical_data.py  fetch_medical_data_enhanced.py  load_medical_knowledge.py  load_sample_data.py
backend/scripts/kg/: import_medical_kg.py  import_medical_kg_realtime.py
backend/scripts/maintenance/: migrate_to_object_storage.py  test_system.py
backend/scripts/ml/: train_ml_models.py
backend/scripts/setup/: init_all.py  verify_setup.py
backend/tests/: README.md  TESTING_GUIDE.md  conftest.py  test_imports.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py  test_auth_middleware.py  test_cache.py  test_exceptions.py  test_production_readiness.py  test_repository.py  test_security.py  test_transaction.py  test_users_auth.py
(+165 files in other folders)
